Small modification on section 1.2

--- a/Wiki-Sheaf.ipynb
+++ b/Wiki-Sheaf.ipynb
@@ -3442,13 +3442,16 @@
     {
       "cell_type": "code",
       "source": [
+        "import time\n",
+        "import random\n",
+        "\n",
         "def parse_wikidata_id(wikidata_url):\n",
         "    '''\n",
         "    Helper function to extract the Wikidata ID from a given Wikidata URL.\n",
         "    '''\n",
         "    return unquote(urlparse(wikidata_url).path.split(\"/\")[-1])\n",
         "\n",
-        "def safe_request(url, params=None, headers=None, pause=3.0):\n",
+        "def safe_request(url, params=None, headers=None, pause=2.0):\n",
         "    retries = 0\n",
         "\n",
         "    if headers is None:\n",
