--- a/Wiki-Sheaf_original.ipynb
+++ b/Wiki-Sheaf_original.ipynb
@@ -1279,7 +1279,6 @@
       "execution_count": 9,
       "metadata": {
         "id": "B9I_opDqHQ4_",
-        "outputId": "06c86085-01c1-4e2f-f111-00f3c36d4d82",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0,
@@ -1340,7 +1339,8 @@
             "c60444fde2b8492e951a2da1e07d7027",
             "390b7e5c41994a4fb34af04f9bd1fc8d"
           ]
-        }
+        },
+        "outputId": "06c86085-01c1-4e2f-f111-00f3c36d4d82"
       },
       "outputs": [
         {
@@ -1430,11 +1430,11 @@
       "execution_count": 10,
       "metadata": {
         "id": "TGoM4l00JiMr",
-        "outputId": "e001eb43-190c-4b43-a862-90972b095825",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
-        }
+        },
+        "outputId": "e001eb43-190c-4b43-a862-90972b095825"
       },
       "outputs": [
         {
@@ -1775,11 +1775,11 @@
       "execution_count": 11,
       "metadata": {
         "id": "RjwsUO89J5k5",
-        "outputId": "1b25f830-cfc5-400c-861f-dc8f5fa62fdf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
-        }
+        },
+        "outputId": "1b25f830-cfc5-400c-861f-dc8f5fa62fdf"
       },
       "outputs": [
         {
@@ -2129,10 +2129,10 @@
       "execution_count": 12,
       "metadata": {
         "id": "r-a-YGY8KW-m",
-        "outputId": "a0544e8f-f10a-4b95-a472-5b8e07f6b2d8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a0544e8f-f10a-4b95-a472-5b8e07f6b2d8"
       },
       "outputs": [
         {
@@ -2197,10 +2197,10 @@
       "execution_count": 13,
       "metadata": {
         "id": "BPhwxSOJKcdS",
-        "outputId": "be4bebb6-7811-4ec6-fb12-84edd6aa820d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "be4bebb6-7811-4ec6-fb12-84edd6aa820d"
       },
       "outputs": [
         {
@@ -2249,11 +2249,11 @@
       "execution_count": 14,
       "metadata": {
         "id": "-VGpnaGZKk5_",
-        "outputId": "16a27ce6-5f3f-4c69-d379-afa2d42fc18a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
-        }
+        },
+        "outputId": "16a27ce6-5f3f-4c69-d379-afa2d42fc18a"
       },
       "outputs": [
         {
@@ -2322,10 +2322,10 @@
       "execution_count": 15,
       "metadata": {
         "id": "1oIHQd72Kpxj",
-        "outputId": "820760b4-1a2e-4024-ae83-e7ee6b94c4dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "820760b4-1a2e-4024-ae83-e7ee6b94c4dc"
       },
       "outputs": [
         {
@@ -2359,10 +2359,10 @@
       "execution_count": 16,
       "metadata": {
         "id": "pr2EblcDKtIY",
-        "outputId": "8c148c75-a02e-4535-b1c7-b9390f3b9dac",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8c148c75-a02e-4535-b1c7-b9390f3b9dac"
       },
       "outputs": [
         {
@@ -2416,10 +2416,10 @@
       "execution_count": 17,
       "metadata": {
         "id": "Q9Ptxfs4KtIY",
-        "outputId": "b30e5552-b115-470e-ed3f-acef3c6827ea",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b30e5552-b115-470e-ed3f-acef3c6827ea"
       },
       "outputs": [
         {
@@ -2475,10 +2475,10 @@
       "execution_count": 18,
       "metadata": {
         "id": "-SiRxsu1KtId",
-        "outputId": "3a750f42-2a01-406d-9138-5ed01e1a89b1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3a750f42-2a01-406d-9138-5ed01e1a89b1"
       },
       "outputs": [
         {
@@ -2507,10 +2507,10 @@
       "execution_count": 19,
       "metadata": {
         "id": "wWKsyCuwKtId",
-        "outputId": "ead41d17-cfb8-4850-ac9a-cee472e59f90",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ead41d17-cfb8-4850-ac9a-cee472e59f90"
       },
       "outputs": [
         {
@@ -2570,10 +2570,10 @@
       "execution_count": 20,
       "metadata": {
         "id": "4WIOakvSKtIe",
-        "outputId": "32077e7a-4378-4f49-f00c-4d1b337d4f88",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "32077e7a-4378-4f49-f00c-4d1b337d4f88"
       },
       "outputs": [
         {
@@ -2617,11 +2617,11 @@
       "execution_count": 21,
       "metadata": {
         "id": "p89uYxH9KtIj",
-        "outputId": "655e08d5-63f2-4f33-a780-42d2a318dcbe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
-        }
+        },
+        "outputId": "655e08d5-63f2-4f33-a780-42d2a318dcbe"
       },
       "outputs": [
         {
@@ -2819,10 +2819,10 @@
       "execution_count": 22,
       "metadata": {
         "id": "moJI1C7X39JE",
-        "outputId": "13375ab4-3096-461d-97d6-265833557cfc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "13375ab4-3096-461d-97d6-265833557cfc"
       },
       "outputs": [
         {
@@ -2889,14 +2889,14 @@
         "    G.nodes[i]['val_mask']   = G.nodes[i]['val_mask']\n",
         "\n",
         "# Convert to torch_geometric.Data.\n",
-        "data = from_networkx(G)\n",
+        "tdidf_graph_data = from_networkx(G)\n",
         "\n",
         "# Fix necessary in order to satisfy the dtypes/names to PyG conventions.\n",
-        "data.x           = data.x.float()          # Shape here: [n,1000].\n",
-        "data.y           = data.y.long()           # Shape here: [n].\n",
-        "data.train_mask  = data.train_mask.bool()  # Shape here: [n].\n",
-        "data.val_mask    = data.val_mask.bool()    # Shape here: [n].\n",
-        "print(data)\n"
+        "tdidf_graph_data.x           = tdidf_graph_data.x.float()          # Shape here: [n,1000].\n",
+        "tdidf_graph_data.y           = tdidf_graph_data.y.long()           # Shape here: [n].\n",
+        "tdidf_graph_data.train_mask  = tdidf_graph_data.train_mask.bool()  # Shape here: [n].\n",
+        "tdidf_graph_data.val_mask    = tdidf_graph_data.val_mask.bool()    # Shape here: [n].\n",
+        "print(tdidf_graph_data)\n"
       ]
     },
     {
@@ -2936,11 +2936,11 @@
       ],
       "metadata": {
         "id": "E9zWk4JcsgLH",
-        "outputId": "3e06e819-7056-4211-dfbb-f4fd66919083",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "3e06e819-7056-4211-dfbb-f4fd66919083"
       },
       "execution_count": 23,
       "outputs": [
@@ -2988,10 +2988,10 @@
         "torch.backends.cudnn.benchmark = False\n",
         "os.environ[\"PYTHONHASHSEED\"] = str(seed)\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-        "data = data.to(device)\n",
+        "tdidf_graph_data = tdidf_graph_data.to(device)\n",
         "\n",
         "# 2) Compute class weights for imbalanced cross‑entropy.\n",
-        "train_y = data.y[data.train_mask]\n",
+        "train_y = tdidf_graph_data.y[tdidf_graph_data.train_mask]\n",
         "class_counts = torch.bincount(train_y)\n",
         "class_weights = 1.0 / (class_counts.float() + 1e-6) # To avoid div by 0.\n",
         "class_weights = class_weights / class_weights.sum() * class_counts.numel()\n",
@@ -3178,25 +3178,25 @@
       "cell_type": "code",
       "source": [
         "# 1) Instantiate GCN Model.\n",
-        "GCN_model = GCN(in_dim = data.x.size(1),\n",
+        "GCN_model = GCN(in_dim = tdidf_graph_data.x.size(1),\n",
         "                hid_dim=64,\n",
         "                out_dim = 3,\n",
         "                dropout=0.5).to(device)\n",
         "\n",
         "# 2) Training the model.\n",
         "best_state, best_val_loss = train_model(\n",
-        "    GCN_model, data, class_weights, patience, max_epochs\n",
+        "    GCN_model, tdidf_graph_data, class_weights, patience, max_epochs\n",
         ")\n",
         "\n",
         "# 3) Evaluation of the Model.\n",
-        "metrics = evaluate_model(GCN_model, data, best_state, best_val_loss)"
+        "metrics = evaluate_model(GCN_model, tdidf_graph_data, best_state, best_val_loss)"
       ],
       "metadata": {
         "id": "OjysfFpulP4n",
-        "outputId": "7bd55b5c-a162-4c00-fc6f-b1586c2ebb4d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7bd55b5c-a162-4c00-fc6f-b1586c2ebb4d"
       },
       "execution_count": 29,
       "outputs": [
@@ -3355,25 +3355,25 @@
       "cell_type": "code",
       "source": [
         "# 1) Instantiate GCN Model.\n",
-        "GAT_model = GAT(in_dim = data.x.size(1),\n",
+        "GAT_model = GAT(in_dim = tdidf_graph_data.x.size(1),\n",
         "                hid_dim=64,\n",
         "                out_dim = 3,\n",
         "                dropout=0.5).to(device)\n",
         "\n",
         "# 2) Training the model.\n",
         "best_state, best_val_loss = train_model(\n",
-        "    GAT_model, data, class_weights, patience, max_epochs\n",
+        "    GAT_model, tdidf_graph_data, class_weights, patience, max_epochs\n",
         ")\n",
         "\n",
         "# 3) Evaluation of the Model.\n",
-        "metrics = evaluate_model(GAT_model, data, best_state, best_val_loss)"
+        "metrics = evaluate_model(GAT_model, tdidf_graph_data, best_state, best_val_loss)"
       ],
       "metadata": {
         "id": "EJOxTdy4MQT-",
-        "outputId": "694c87a6-4798-496b-b9e3-1b0ea60fe86a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "694c87a6-4798-496b-b9e3-1b0ea60fe86a"
       },
       "execution_count": 31,
       "outputs": [
@@ -3479,25 +3479,25 @@
       "cell_type": "code",
       "source": [
         "# 1) Instantiate GCN Model.\n",
-        "GraphSAGE_model = GraphSAGE(in_dim = data.x.size(1),\n",
+        "GraphSAGE_model = GraphSAGE(in_dim = tdidf_graph_data.x.size(1),\n",
         "                hid_dim=64,\n",
         "                out_dim = 3,\n",
         "                dropout=0.5).to(device)\n",
         "\n",
         "# 2) Training the model.\n",
         "best_state, best_val_loss = train_model(\n",
-        "    GraphSAGE_model, data, class_weights, patience, max_epochs\n",
+        "    GraphSAGE_model, tdidf_graph_data, class_weights, patience, max_epochs\n",
         ")\n",
         "\n",
         "# 3) Evaluation of the Model.\n",
-        "metrics = evaluate_model(GraphSAGE_model, data, best_state, best_val_loss)"
+        "metrics = evaluate_model(GraphSAGE_model, tdidf_graph_data, best_state, best_val_loss)"
       ],
       "metadata": {
         "id": "fZyfSnyZPOrX",
-        "outputId": "aea17317-fa58-429b-d279-a2107916d859",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "aea17317-fa58-429b-d279-a2107916d859"
       },
       "execution_count": 34,
       "outputs": [
@@ -3611,25 +3611,25 @@
       "cell_type": "code",
       "source": [
         "# 1) Instantiate GCN Model.\n",
-        "GIN_model = GIN(in_dim = data.x.size(1),\n",
+        "GIN_model = GIN(in_dim = tdidf_graph_data.x.size(1),\n",
         "                hid_dim=64,\n",
         "                out_dim = 3,\n",
         "                dropout=0.5).to(device)\n",
         "\n",
         "# 2) Training the model.\n",
         "best_state, best_val_loss = train_model(\n",
-        "    GIN_model, data, class_weights, patience, max_epochs\n",
+        "    GIN_model, tdidf_graph_data, class_weights, patience, max_epochs\n",
         ")\n",
         "\n",
         "# 3) Evaluation of the Model.\n",
-        "metrics = evaluate_model(GIN_model, data, best_state, best_val_loss)"
+        "metrics = evaluate_model(GIN_model, tdidf_graph_data, best_state, best_val_loss)"
       ],
       "metadata": {
         "id": "6BYwtA1BPoEB",
-        "outputId": "d3e44d36-e8f1-43a8-fd93-b1e17d5e72f3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d3e44d36-e8f1-43a8-fd93-b1e17d5e72f3"
       },
       "execution_count": 36,
       "outputs": [
@@ -3782,18 +3782,18 @@
         "    return 1.0 - h\n",
         "\n",
         "# Example usage with your `data` object:\n",
-        "homophily    = compute_edge_homophily(data.edge_index, data.y)\n",
-        "heterophily  = compute_edge_heterophily(data.edge_index, data.y)\n",
+        "homophily    = compute_edge_homophily(tdidf_graph_data.edge_index, tdidf_graph_data.y)\n",
+        "heterophily  = compute_edge_heterophily(tdidf_graph_data.edge_index, tdidf_graph_data.y)\n",
         "\n",
         "print(f\"Edge homophily   = {homophily:.4f}\")\n",
         "print(f\"Edge heterophily = {heterophily:.4f}\")"
       ],
       "metadata": {
-        "id": "tlF2vkP-WwC6",
-        "outputId": "e340189c-33fd-4f56-ad6b-1f07cc460b2e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tlF2vkP-WwC6",
+        "outputId": "e340189c-33fd-4f56-ad6b-1f07cc460b2e"
       },
       "execution_count": 40,
       "outputs": [
