Results for Sheaf (72.67%)

--- a/Wiki-Sheaf_original.ipynb
+++ b/Wiki-Sheaf_original.ipynb
@@ -4633,7 +4633,7 @@
         "id": "mb8bmX06Uvu5",
         "outputId": "49b400f4-83d5-4866-b5e2-e0623c3239a7"
       },
-      "execution_count": null,
+      "execution_count": 107,
       "outputs": [
         {
           "output_type": "stream",
@@ -4646,7 +4646,11 @@
             "[Epoch 050] Train Loss: 0.4547  Val Loss:   0.6780  Val Acc:    0.7167  Prec:       0.7017  Rec:        0.7059  F1:         0.7002  PPL:        1.97\n",
             "[Epoch 060] Train Loss: 0.4118  Val Loss:   0.7044  Val Acc:    0.7067  Prec:       0.6915  Rec:        0.6948  F1:         0.6908  PPL:        2.02\n",
             "[Epoch 070] Train Loss: 0.3706  Val Loss:   0.7224  Val Acc:    0.7200  Prec:       0.7037  Rec:        0.7080  F1:         0.7044  PPL:        2.06\n",
-            "[Epoch 080] Train Loss: 0.3078  Val Loss:   0.7745  Val Acc:    0.7200  Prec:       0.7052  Rec:        0.7085  F1:         0.7063  PPL:        2.17\n"
+            "[Epoch 080] Train Loss: 0.3078  Val Loss:   0.7745  Val Acc:    0.7200  Prec:       0.7052  Rec:        0.7085  F1:         0.7063  PPL:        2.17\n",
+            "Early stopping at epoch 86\n",
+            "\n",
+            "Best Val Loss: 0.6544\n",
+            "Final Val Acc: 0.7267, Prec: 0.7128, Rec: 0.7173, F1: 0.7138, PPL: 1.92\n"
           ]
         }
       ]
