--- a/Wiki-Sheaf_original.ipynb
+++ b/Wiki-Sheaf_original.ipynb
@@ -4951,10 +4951,94 @@
         "metrics = evaluate_model(GCN_model, contrastive_learning_data, best_state, best_val_loss)"
       ],
       "metadata": {
-        "id": "it8f_y6uS0Qx"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "it8f_y6uS0Qx",
+        "outputId": "8fb56006-5c26-4fb7-ea28-0ba6f0da3cc1"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[Epoch 010] Train Loss: 0.8274  Val Loss:   0.9178  Val Acc:    0.8300  Prec:       0.8589  Rec:        0.8427  F1:         0.8180  PPL:        2.50\n",
+            "[Epoch 020] Train Loss: 0.6909  Val Loss:   0.7764  Val Acc:    0.8800  Prec:       0.8865  Rec:        0.8886  F1:         0.8719  PPL:        2.17\n",
+            "[Epoch 030] Train Loss: 0.5843  Val Loss:   0.6631  Val Acc:    0.9100  Prec:       0.9082  Rec:        0.9154  F1:         0.9049  PPL:        1.94\n",
+            "[Epoch 040] Train Loss: 0.4947  Val Loss:   0.5575  Val Acc:    0.9267  Prec:       0.9227  Rec:        0.9300  F1:         0.9245  PPL:        1.75\n",
+            "[Epoch 050] Train Loss: 0.4286  Val Loss:   0.4707  Val Acc:    0.9333  Prec:       0.9302  Rec:        0.9347  F1:         0.9316  PPL:        1.60\n",
+            "[Epoch 060] Train Loss: 0.3991  Val Loss:   0.4314  Val Acc:    0.9400  Prec:       0.9387  Rec:        0.9384  F1:         0.9385  PPL:        1.54\n",
+            "[Epoch 070] Train Loss: 0.3748  Val Loss:   0.4089  Val Acc:    0.9433  Prec:       0.9428  Rec:        0.9387  F1:         0.9406  PPL:        1.51\n",
+            "[Epoch 080] Train Loss: 0.3544  Val Loss:   0.3940  Val Acc:    0.9400  Prec:       0.9371  Rec:        0.9368  F1:         0.9369  PPL:        1.48\n",
+            "[Epoch 090] Train Loss: 0.3353  Val Loss:   0.3763  Val Acc:    0.9400  Prec:       0.9358  Rec:        0.9368  F1:         0.9363  PPL:        1.46\n",
+            "[Epoch 100] Train Loss: 0.3186  Val Loss:   0.3605  Val Acc:    0.9400  Prec:       0.9358  Rec:        0.9368  F1:         0.9363  PPL:        1.43\n",
+            "[Epoch 110] Train Loss: 0.3104  Val Loss:   0.3506  Val Acc:    0.9500  Prec:       0.9488  Rec:        0.9462  F1:         0.9474  PPL:        1.42\n",
+            "[Epoch 120] Train Loss: 0.3030  Val Loss:   0.3435  Val Acc:    0.9500  Prec:       0.9488  Rec:        0.9462  F1:         0.9474  PPL:        1.41\n",
+            "[Epoch 130] Train Loss: 0.2960  Val Loss:   0.3378  Val Acc:    0.9500  Prec:       0.9488  Rec:        0.9462  F1:         0.9474  PPL:        1.40\n",
+            "[Epoch 140] Train Loss: 0.2896  Val Loss:   0.3296  Val Acc:    0.9500  Prec:       0.9488  Rec:        0.9462  F1:         0.9474  PPL:        1.39\n",
+            "[Epoch 150] Train Loss: 0.2830  Val Loss:   0.3231  Val Acc:    0.9500  Prec:       0.9488  Rec:        0.9462  F1:         0.9474  PPL:        1.38\n",
+            "[Epoch 160] Train Loss: 0.2799  Val Loss:   0.3197  Val Acc:    0.9500  Prec:       0.9488  Rec:        0.9462  F1:         0.9474  PPL:        1.38\n",
+            "[Epoch 170] Train Loss: 0.2772  Val Loss:   0.3163  Val Acc:    0.9500  Prec:       0.9488  Rec:        0.9462  F1:         0.9474  PPL:        1.37\n",
+            "[Epoch 180] Train Loss: 0.2739  Val Loss:   0.3129  Val Acc:    0.9500  Prec:       0.9488  Rec:        0.9462  F1:         0.9474  PPL:        1.37\n",
+            "[Epoch 190] Train Loss: 0.2712  Val Loss:   0.3089  Val Acc:    0.9500  Prec:       0.9488  Rec:        0.9462  F1:         0.9474  PPL:        1.36\n",
+            "[Epoch 200] Train Loss: 0.2686  Val Loss:   0.3066  Val Acc:    0.9500  Prec:       0.9488  Rec:        0.9462  F1:         0.9474  PPL:        1.36\n",
+            "[Epoch 210] Train Loss: 0.2668  Val Loss:   0.3047  Val Acc:    0.9500  Prec:       0.9488  Rec:        0.9462  F1:         0.9474  PPL:        1.36\n",
+            "[Epoch 220] Train Loss: 0.2652  Val Loss:   0.3033  Val Acc:    0.9500  Prec:       0.9488  Rec:        0.9462  F1:         0.9474  PPL:        1.35\n",
+            "[Epoch 230] Train Loss: 0.2638  Val Loss:   0.3015  Val Acc:    0.9500  Prec:       0.9488  Rec:        0.9462  F1:         0.9474  PPL:        1.35\n",
+            "[Epoch 240] Train Loss: 0.2626  Val Loss:   0.3002  Val Acc:    0.9500  Prec:       0.9488  Rec:        0.9462  F1:         0.9474  PPL:        1.35\n",
+            "[Epoch 250] Train Loss: 0.2611  Val Loss:   0.2987  Val Acc:    0.9500  Prec:       0.9488  Rec:        0.9462  F1:         0.9474  PPL:        1.35\n",
+            "[Epoch 260] Train Loss: 0.2607  Val Loss:   0.2980  Val Acc:    0.9500  Prec:       0.9488  Rec:        0.9462  F1:         0.9474  PPL:        1.35\n",
+            "[Epoch 270] Train Loss: 0.2599  Val Loss:   0.2969  Val Acc:    0.9500  Prec:       0.9488  Rec:        0.9462  F1:         0.9474  PPL:        1.35\n",
+            "[Epoch 280] Train Loss: 0.2593  Val Loss:   0.2960  Val Acc:    0.9500  Prec:       0.9488  Rec:        0.9462  F1:         0.9474  PPL:        1.34\n",
+            "[Epoch 290] Train Loss: 0.2583  Val Loss:   0.2951  Val Acc:    0.9500  Prec:       0.9488  Rec:        0.9462  F1:         0.9474  PPL:        1.34\n",
+            "[Epoch 300] Train Loss: 0.2577  Val Loss:   0.2943  Val Acc:    0.9500  Prec:       0.9488  Rec:        0.9462  F1:         0.9474  PPL:        1.34\n",
+            "[Epoch 310] Train Loss: 0.2571  Val Loss:   0.2942  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 320] Train Loss: 0.2571  Val Loss:   0.2938  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 330] Train Loss: 0.2564  Val Loss:   0.2933  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 340] Train Loss: 0.2562  Val Loss:   0.2927  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 350] Train Loss: 0.2559  Val Loss:   0.2924  Val Acc:    0.9500  Prec:       0.9488  Rec:        0.9462  F1:         0.9474  PPL:        1.34\n",
+            "[Epoch 360] Train Loss: 0.2556  Val Loss:   0.2924  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 370] Train Loss: 0.2554  Val Loss:   0.2923  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 380] Train Loss: 0.2553  Val Loss:   0.2920  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 390] Train Loss: 0.2551  Val Loss:   0.2915  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 400] Train Loss: 0.2550  Val Loss:   0.2914  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 410] Train Loss: 0.2549  Val Loss:   0.2913  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 420] Train Loss: 0.2548  Val Loss:   0.2913  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 430] Train Loss: 0.2547  Val Loss:   0.2910  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 440] Train Loss: 0.2544  Val Loss:   0.2912  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 450] Train Loss: 0.2547  Val Loss:   0.2907  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 460] Train Loss: 0.2545  Val Loss:   0.2909  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 470] Train Loss: 0.2545  Val Loss:   0.2910  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 480] Train Loss: 0.2542  Val Loss:   0.2910  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 490] Train Loss: 0.2541  Val Loss:   0.2907  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 500] Train Loss: 0.2543  Val Loss:   0.2906  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 510] Train Loss: 0.2540  Val Loss:   0.2908  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 520] Train Loss: 0.2539  Val Loss:   0.2909  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 530] Train Loss: 0.2540  Val Loss:   0.2906  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 540] Train Loss: 0.2541  Val Loss:   0.2905  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 550] Train Loss: 0.2544  Val Loss:   0.2906  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 560] Train Loss: 0.2542  Val Loss:   0.2904  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 570] Train Loss: 0.2542  Val Loss:   0.2904  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 580] Train Loss: 0.2540  Val Loss:   0.2903  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 590] Train Loss: 0.2541  Val Loss:   0.2902  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 600] Train Loss: 0.2539  Val Loss:   0.2905  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 610] Train Loss: 0.2539  Val Loss:   0.2905  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 620] Train Loss: 0.2538  Val Loss:   0.2907  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 630] Train Loss: 0.2540  Val Loss:   0.2908  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 640] Train Loss: 0.2538  Val Loss:   0.2902  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 650] Train Loss: 0.2541  Val Loss:   0.2902  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 660] Train Loss: 0.2541  Val Loss:   0.2905  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 670] Train Loss: 0.2538  Val Loss:   0.2905  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 680] Train Loss: 0.2541  Val Loss:   0.2902  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "[Epoch 690] Train Loss: 0.2541  Val Loss:   0.2904  Val Acc:    0.9533  Prec:       0.9519  Rec:        0.9506  F1:         0.9512  PPL:        1.34\n",
+            "Early stopping at epoch 694\n",
+            "\n",
+            "Best Val Loss: 0.2901\n",
+            "Final Val Acc: 0.9533, Prec: 0.9519, Rec: 0.9506, F1: 0.9512, PPL: 1.34\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -5333,7 +5417,7 @@
         "id": "k2-edzGpE77q",
         "outputId": "1d3977e3-c786-4523-a072-7e14bdf78a94"
       },
-      "execution_count": null,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
@@ -5351,7 +5435,17 @@
             "[Epoch 100] Train Loss: 0.1782  Val Loss:   0.1482  Val Acc:    0.9567  Prec:       0.9535  Rec:        0.9575  F1:         0.9551  PPL:        1.16\n",
             "[Epoch 110] Train Loss: 0.1689  Val Loss:   0.1482  Val Acc:    0.9567  Prec:       0.9535  Rec:        0.9575  F1:         0.9551  PPL:        1.16\n",
             "[Epoch 120] Train Loss: 0.1699  Val Loss:   0.1480  Val Acc:    0.9567  Prec:       0.9535  Rec:        0.9575  F1:         0.9551  PPL:        1.16\n",
-            "[Epoch 130] Train Loss: 0.1702  Val Loss:   0.1478  Val Acc:    0.9567  Prec:       0.9535  Rec:        0.9575  F1:         0.9551  PPL:        1.16\n"
+            "[Epoch 130] Train Loss: 0.1702  Val Loss:   0.1478  Val Acc:    0.9567  Prec:       0.9535  Rec:        0.9575  F1:         0.9551  PPL:        1.16\n",
+            "[Epoch 140] Train Loss: 0.1655  Val Loss:   0.1473  Val Acc:    0.9567  Prec:       0.9535  Rec:        0.9575  F1:         0.9551  PPL:        1.16\n",
+            "[Epoch 150] Train Loss: 0.1706  Val Loss:   0.1466  Val Acc:    0.9567  Prec:       0.9535  Rec:        0.9575  F1:         0.9551  PPL:        1.16\n",
+            "[Epoch 160] Train Loss: 0.1674  Val Loss:   0.1465  Val Acc:    0.9567  Prec:       0.9535  Rec:        0.9575  F1:         0.9551  PPL:        1.16\n",
+            "[Epoch 170] Train Loss: 0.1684  Val Loss:   0.1462  Val Acc:    0.9567  Prec:       0.9535  Rec:        0.9575  F1:         0.9551  PPL:        1.16\n",
+            "[Epoch 180] Train Loss: 0.1693  Val Loss:   0.1458  Val Acc:    0.9567  Prec:       0.9535  Rec:        0.9575  F1:         0.9551  PPL:        1.16\n",
+            "[Epoch 190] Train Loss: 0.1675  Val Loss:   0.1454  Val Acc:    0.9600  Prec:       0.9575  Rec:        0.9606  F1:         0.9588  PPL:        1.16\n",
+            "[Epoch 200] Train Loss: 0.1628  Val Loss:   0.1455  Val Acc:    0.9600  Prec:       0.9575  Rec:        0.9606  F1:         0.9588  PPL:        1.16\n",
+            "\n",
+            "Best Val Loss: 0.1453\n",
+            "Final Val Acc: 0.9600, Prec: 0.9575, Rec: 0.9606, F1: 0.9588, PPL: 1.16\n"
           ]
         }
       ]
