--- a/Fine_Tuned_Transformer.ipynb
+++ b/Fine_Tuned_Transformer.ipynb
@@ -5333,35 +5333,46 @@
         "        self.encoder = base_model\n",
         "        hidden_size = base_model.config.hidden_size\n",
         "        self.dropout = nn.Dropout(0.4)\n",
+        "\n",
+        "        # Classifier with a dropout of 0.4 and ReLU activation function.\n",
         "        self.classifier = nn.Sequential(\n",
         "            nn.Linear(hidden_size, hidden_size),\n",
         "            nn.ReLU(),\n",
         "            nn.Dropout(0.4),\n",
         "            nn.Linear(hidden_size, num_classes)\n",
         "        )\n",
-        "\n",
+        "        # Alpha parameters learnable for the weighted sum between max pool and mean pool.\n",
         "        self.alpha_param = nn.Parameter(torch.tensor(0.0))\n",
         "\n",
         "    def mean_pooling(self, hidden, attention_mask):\n",
+        "        # Adding dimension to mask for further multiplication.\n",
         "        mask = attention_mask.unsqueeze(-1)\n",
+        "        # Multiplication with mask (1 for real number,0 otherwise for padding).\n",
         "        masked_hidden = hidden * mask\n",
+        "        # Summing of all the terms.\n",
         "        summed = masked_hidden.sum(dim=1)\n",
+        "        # Counting with a clamping in order to avoid division by zero.\n",
         "        count = mask.sum(dim=1).clamp(min=1e-9)\n",
         "        return summed / count\n",
         "\n",
         "    def max_pooling(self, hidden, attention_mask):\n",
+        "        # Adding dimension to mask for further multiplication.\n",
         "        mask = attention_mask.unsqueeze(-1)\n",
+        "        # Filling the padding with extreme low number that will never be extracted with the max pool.\n",
         "        masked_hidden = hidden.masked_fill(mask == 0, -1e9)\n",
         "        return masked_hidden.max(dim=1).values\n",
         "\n",
         "    def forward(self, input_ids, attention_mask, labels=None):\n",
+        "        # Output from the encoder.\n",
         "        output = self.encoder(input_ids=input_ids, attention_mask=attention_mask)\n",
+        "        # Last hidden state extracted from the encoder.\n",
         "        hidden = output.last_hidden_state\n",
-        "\n",
+        "        # Mean and max pooling.\n",
         "        mean_pooled = self.mean_pooling(hidden, attention_mask)\n",
         "        max_pooled = self.max_pooling(hidden, attention_mask)\n",
-        "\n",
+        "        # Alpha learnable putted in interval [0,1] by the sigmoid.\n",
         "        alpha = torch.sigmoid(self.alpha_param)\n",
+        "        # Weighted sum with alpha term.\n",
         "        pooled = alpha * mean_pooled + (1 - alpha) * max_pooled\n",
         "\n",
         "        logits = self.classifier(self.dropout(pooled))\n",
@@ -5438,8 +5449,11 @@
         "\n",
         "    for name, desc, summary in zip(examples[\"name\"], examples[\"description\"], examples[\"summary\"]):\n",
         "        summary = str(summary or \"\")\n",
+        "        # In order to avoid simple split until the point (i.e case like M.Rossi is not splitted into 2 sentences).\n",
         "        sentences = sent_tokenize(summary)\n",
+        "        # Joint of the first 3 sentences.\n",
         "        first_sentences = \" \".join(sentences[:3]) if sentences else ''\n",
+        "        # New combined text with summary ennhancement.\n",
         "        combined_text = f\"{name}: {desc}. Summary: {first_sentences}\"\n",
         "        combined_texts.append(combined_text)\n",
         "\n",
@@ -5460,18 +5474,21 @@
         "    '''\n",
         "    Help function to freeze the last k layers of the model.\n",
         "    '''\n",
+        "    # Bert case.\n",
         "    if encoder_id == \"bert\":\n",
         "      total_layers = len(model.bert.encoder.layer)\n",
         "      for i, layer in enumerate(model.bert.encoder.layer):\n",
         "          requires_grad = i >= total_layers - k\n",
         "          for param in layer.parameters():\n",
         "              param.requires_grad = requires_grad\n",
+        "    # Distillbert case.\n",
         "    if encoder_id == \"distillbert\":\n",
         "      total_layers = len(model.encoder.transformer.layer)\n",
         "      for i, layer in enumerate(model.encoder.transformer.layer):\n",
         "          requires_grad = i >= total_layers - k\n",
         "          for param in layer.parameters():\n",
         "              param.requires_grad = requires_grad\n",
+        "    # All other case.\n",
         "    if encoder_id == \"general\":\n",
         "      total_layers = len(model.encoder.encoder.layer)\n",
         "      for i, layer in enumerate(model.encoder.encoder.layer):\n",
@@ -5595,9 +5612,9 @@
         "Here highlated all the model used in the trials:\n",
         "\n",
         "- **Simple Classifier**: just used in the BERT case with just a linear classifier.\n",
-        "- **GRU Classifier**:also here just used in the BERT case adding a linear classifier after the GRU result\n",
-        "- **Max pooling classifier**: used with the mpnet encoder,slightly worse result but stable.\n",
-        "- **Mean pooling classifier**: widely used in most of the cases becuase the increasing of stability during training."
+        "- **GRU Classifier**:also here just used in the BERT case adding a linear classifier after the GRU result.\n",
+        "- **Mean pooling classifier**: widely used in most of the cases becuase the increasing of stability during training.\n",
+        "- **Max pooling classifier**: used with the mpnet encoder,slightly worse result but stable."
       ],
       "metadata": {
         "id": "AXQf486d0CBK"
@@ -5623,11 +5640,15 @@
         "        self.classifier = nn.Linear(hidden_size, num_classes)\n",
         "\n",
         "    def forward(self, input_ids, attention_mask, labels=None):\n",
+        "        # Output from the encoder.\n",
         "        outputs = self.encoder(input_ids=input_ids, attention_mask=attention_mask)\n",
+        "        # [CLS] token.\n",
         "        pooled_output = outputs.last_hidden_state[:, 0]\n",
+        "        # Dropout and classification.\n",
         "        pooled_output = self.dropout(pooled_output)\n",
         "        logits = self.classifier(pooled_output)\n",
         "\n",
+        "        # Cross entropy loss.\n",
         "        if labels is not None:\n",
         "            loss_fct = nn.CrossEntropyLoss()\n",
         "            loss = loss_fct(logits, labels)\n",
@@ -5658,10 +5679,10 @@
         "        super().__init__()\n",
         "        self.encoder = base_model\n",
         "        encoder_hidden_size = base_model.config.hidden_size\n",
-        "\n",
         "        self.rnn =nn.GRU(encoder_hidden_size, hidden_dim, batch_first=True, bidirectional=True)\n",
-        "\n",
         "        self.dropout = nn.Dropout(0.4)\n",
+        "\n",
+        "        # Classifier with a dropout of 0.4\n",
         "        self.classifier = nn.Sequential(\n",
         "            nn.Linear(hidden_dim * 2, hidden_dim),\n",
         "            nn.ReLU(),\n",
@@ -5670,15 +5691,19 @@
         "        )\n",
         "\n",
         "    def forward(self, input_ids, attention_mask, labels=None):\n",
+        "        # Output from the encoder.\n",
         "        encoder_output = self.encoder(input_ids=input_ids, attention_mask=attention_mask)\n",
+        "        # Extraction of the last hidden state of the encoder.\n",
         "        hidden_states = encoder_output.last_hidden_state\n",
-        "\n",
+        "        # GRU result with the encoder output as input.\n",
         "        rnn_output, _ = self.rnn(hidden_states)\n",
-        "\n",
-        "        last_hidden = rnn_output[:, -1, :]\n",
-        "\n",
+        "        # Last valid token from the rnn.\n",
+        "        lengths = attention_mask.sum(dim=1) - 1\n",
+        "        last_hidden = rnn_output[torch.arange(rnn_output.size(0)), lengths]\n",
+        "        # Classification head.\n",
         "        logits = self.classifier(self.dropout(last_hidden))\n",
         "\n",
+        "        # Cross entropy loss.\n",
         "        if labels is not None:\n",
         "            loss_fn = nn.CrossEntropyLoss()\n",
         "            loss = loss_fn(logits, labels)\n",
@@ -5710,6 +5735,8 @@
         "        self.encoder = base_model\n",
         "        hidden_size = base_model.config.hidden_size\n",
         "        self.dropout = nn.Dropout(0.4)\n",
+        "\n",
+        "        # Classifier with a dropout of 0.4 and ReLU activation function.\n",
         "        self.classifier = nn.Sequential(\n",
         "            nn.Linear(hidden_size, hidden_size),\n",
         "            nn.ReLU(),\n",
@@ -5717,19 +5744,28 @@
         "            nn.Linear(hidden_size, num_classes)\n",
         "        )\n",
         "\n",
-        "    def mean_pooling(self, hidden, attention_mask):\n",
+        "     def mean_pooling(self, hidden, attention_mask):\n",
+        "        # Adding dimension to mask for further multiplication.\n",
         "        mask = attention_mask.unsqueeze(-1)\n",
+        "        # Multiplication with mask (1 for real number,0 otherwise for padding).\n",
         "        masked_hidden = hidden * mask\n",
+        "        # Summing of all the terms.\n",
         "        summed = masked_hidden.sum(dim=1)\n",
+        "        # Counting with a clamping in order to avoid division by zero.\n",
         "        count = mask.sum(dim=1).clamp(min=1e-9)\n",
         "        return summed / count\n",
         "\n",
         "    def forward(self, input_ids, attention_mask, labels=None):\n",
+        "        # Output from the encoder.\n",
         "        output = self.encoder(input_ids=input_ids, attention_mask=attention_mask)\n",
+        "        # Last hidden state extracted from the encoder.\n",
         "        hidden = output.last_hidden_state\n",
+        "        # Mean pooling.\n",
         "        pooled = self.mean_pooling(hidden, attention_mask)\n",
+        "        # Classification head.\n",
         "        logits = self.classifier(self.dropout(pooled))\n",
         "\n",
+        "        # Cross entropy loss.\n",
         "        if labels is not None:\n",
         "            loss_fn = nn.CrossEntropyLoss()\n",
         "            loss = loss_fn(logits, labels)\n",
@@ -5761,6 +5797,8 @@
         "        self.encoder = base_model\n",
         "        hidden_size = base_model.config.hidden_size\n",
         "        self.dropout = nn.Dropout(0.4)\n",
+        "\n",
+        "        # Classifier with a dropout of 0.4 and ReLU activation function.\n",
         "        self.classifier = nn.Sequential(\n",
         "            nn.Linear(hidden_size, hidden_size),\n",
         "            nn.ReLU(),\n",
@@ -5769,16 +5807,23 @@
         "        )\n",
         "\n",
         "    def max_pooling(self, hidden, attention_mask):\n",
+        "        # Adding dimension to mask for further multiplication.\n",
         "        mask = attention_mask.unsqueeze(-1)\n",
+        "        # Filling the padding with extreme low number that will never be extracted with the max pool.\n",
         "        masked_hidden = hidden.masked_fill(mask == 0, -1e9)\n",
         "        return masked_hidden.max(dim=1).values\n",
         "\n",
         "    def forward(self, input_ids, attention_mask, labels=None):\n",
+        "        # Output from the encoder.\n",
         "        output = self.encoder(input_ids=input_ids, attention_mask=attention_mask)\n",
+        "        # Last hidden state extracted from the encoder.\n",
         "        hidden = output.last_hidden_state\n",
+        "        # Max pooling.\n",
         "        pooled = self.max_pooling(hidden, attention_mask)\n",
+        "        # Classification head.\n",
         "        logits = self.classifier(self.dropout(pooled))\n",
         "\n",
+        "        # Cross entropy loss.\n",
         "        if labels is not None:\n",
         "            loss_fn = nn.CrossEntropyLoss()\n",
         "            loss = loss_fn(logits, labels)\n",
