--- a/Wiki-Graph_original.ipynb
+++ b/Wiki-Graph_original.ipynb
@@ -23,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -220,7 +220,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -284,13 +284,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "B9I_opDqHQ4_",
         "outputId": "42e9a0f8-25ca-4b5d-9e51-5fcea9469fcc",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0,
           "referenced_widgets": [
             "8015b7e1b64746219bef9aa24f58dbb3",
             "a9950a1e1f554bc6b8fec51c67d8fbc4",
@@ -435,12 +434,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "TGoM4l00JiMr",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "776588ae-6bef-433f-a448-ea8f1bffe688"
       },
@@ -780,12 +778,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "RjwsUO89J5k5",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "223cf328-a999-4efa-b90f-2032d4cc9930"
       },
@@ -1218,7 +1215,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "moJI1C7X39JE",
         "colab": {
@@ -1304,7 +1301,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##### 2.1.1: SAMPLED SUBGRAPH VISUALIZATION"
+        "##### 2.1.1: ORIGINAL, SAMPLED SUBGRAPH and 2 BIGGEST CLIQUES VISUALIZATION"
       ],
       "metadata": {
         "id": "hECEeCSrE-Bj"
@@ -1313,38 +1310,67 @@
     {
       "cell_type": "code",
       "source": [
-        "# 1) Sample 200 random nodes.\n",
-        "sample_nodes = random.sample(list(G.nodes()), 200)\n",
-        "subG = G.subgraph(sample_nodes)\n",
-        "pos = nx.spring_layout(subG, seed=42)\n",
+        "# Plot entire Graph.\n",
+        "# 1) Color maps for nodes.\n",
+        "label_names = {\n",
+        "    0: 'cultural agnostic',\n",
+        "    1: 'cultural representative',\n",
+        "    2: 'cultural exclusive'\n",
+        "}\n",
+        "label_colors = {\n",
+        "    0: 'tab:blue',\n",
+        "    1: 'tab:orange',\n",
+        "    2: 'tab:green'\n",
+        "}\n",
+        "node_colors = [\n",
+        "    label_colors[G.nodes[n]['y']]\n",
+        "    for n in G.nodes()\n",
+        "]\n",
         "\n",
-        "# 2) Draw the subgraph.\n",
-        "plt.figure(figsize=(10, 10))\n",
-        "nx.draw(subG, pos,\n",
-        "        node_size=50,\n",
-        "        edge_color=\"gray\",\n",
-        "        with_labels=False)\n",
-        "plt.title(\"Sampled Subgraph (200 nodes) of TF–IDF + Category/Subcategory Clique Graph\")\n",
-        "plt.show()\n",
+        "# 2) Edge colors for all edges.\n",
+        "edge_colors = [\n",
+        "    'red' if G.nodes[u]['y'] != G.nodes[v]['y'] else 'lightgray'\n",
+        "    for u, v in G.edges()\n",
+        "]\n",
         "\n",
-        "# 3) Plot Degree Distribution of the full graph.\n",
-        "plt.figure(figsize=(6,4))\n",
-        "degrees = [d for _, d in G.degree()]\n",
-        "plt.hist(degrees, bins=50, color='skyblue', edgecolor='black')\n",
-        "plt.xlabel(\"Degree\")\n",
-        "plt.ylabel(\"Number of nodes\")\n",
-        "plt.title(\"Degree Distribution\")\n",
+        "\n",
+        "# 3) Plot the graph\n",
+        "pos = nx.spring_layout(G, seed=42)\n",
+        "plt.figure(figsize=(12,12))\n",
+        "nx.draw(\n",
+        "    G, pos,\n",
+        "    node_size=20,\n",
+        "    node_color=node_colors,\n",
+        "    edge_color=edge_colors,\n",
+        "    with_labels=False,\n",
+        "    alpha=0.8\n",
+        ")\n",
+        "\n",
+        "# 4) Build legend.\n",
+        "legend_patches = [\n",
+        "    Patch(color=color, label=label_names[label])\n",
+        "    for label, color in label_colors.items()\n",
+        "]\n",
+        "legend_patches.append(Patch(color='red', label='heterophilous edge'))\n",
+        "\n",
+        "plt.legend(\n",
+        "    handles=legend_patches,\n",
+        "    loc='lower left',\n",
+        "    fontsize='small',\n",
+        "    frameon=True\n",
+        ")\n",
+        "plt.title(\"Full Graph: Nodes Colored by Label, Red=Heterophilous Edges\")\n",
+        "plt.axis('off')\n",
         "plt.show()\n"
       ],
       "metadata": {
         "id": "E9zWk4JcsgLH",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "2b4a6e35-b381-4a73-8b47-7d92ea718099"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1367,6 +1393,107 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Plot a subgraph of 200 random nodes.\n",
+        "# 1) Sample 200 random nodes.\n",
+        "sample_nodes = random.sample(list(G.nodes()), 200)\n",
+        "subG = G.subgraph(sample_nodes)\n",
+        "pos = nx.spring_layout(subG, seed=42)\n",
+        "\n",
+        "# 1.5) Build color maps for the nodes.\n",
+        "pos = nx.spring_layout(subG, seed=42)\n",
+        "node_colors = [ label_colors[G.nodes[n]['y']] for n in subG.nodes() ]\n",
+        "\n",
+        "# 1.75) Build color maps for the edges.\n",
+        "edge_colors = [\n",
+        "    'red' if G.nodes[u]['y'] != G.nodes[v]['y'] else 'lightgray'\n",
+        "    for u, v in subG.edges()\n",
+        "]\n",
+        "\n",
+        "# 2) Draw the subgraph.\n",
+        "plt.figure(figsize=(10, 10))\n",
+        "nx.draw(subG, pos,\n",
+        "        node_size=10,\n",
+        "        node_color=node_colors,\n",
+        "        edge_color=edge_colors,\n",
+        "        with_labels=False)\n",
+        "plt.title(\"Sampled Subgraph with Node‐Labels & Heterophilous Edges Highlighted\")\n",
+        "legend_patches = [\n",
+        "    Patch(color=color, label=label_names[label])\n",
+        "    for label, color in label_colors.items()\n",
+        "]\n",
+        "legend_patches.append(Patch(color='red', label='heterophilous edge'))\n",
+        "plt.legend(handles=legend_patches, loc='lower left')\n",
+        "\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "MZ9ksRo4oDqb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Show the 2 biggest cliques from original graph (zoomed in).\n",
+        "\n",
+        "# 1) Find and sort all maximal cliques by size.\n",
+        "cliques = list(nx.find_cliques(G))\n",
+        "cliques_sorted = sorted(cliques, key=len, reverse=True)\n",
+        "\n",
+        "# 2) Take the top-2 largest cliques.\n",
+        "top_cliques = cliques_sorted[:2]\n",
+        "\n",
+        "# Decide here how many nodes per clique to actually plot. (default=31)\n",
+        "k = 31\n",
+        "\n",
+        "for idx, clique in enumerate(top_cliques, start=1):\n",
+        "    # 2.1) sample up to k nodes from this clique.\n",
+        "    sub_nodes = random.sample(clique, min(k, len(clique)))\n",
+        "    subG = G.subgraph(sub_nodes)\n",
+        "\n",
+        "    # 2.2) node colors by label and edge colors (red if heterophilic)\n",
+        "    pos = nx.spring_layout(subG, seed=42)\n",
+        "    node_colors = [ label_colors[G.nodes[n]['y']] for n in subG.nodes() ]\n",
+        "    edge_colors = [\n",
+        "        'red' if G.nodes[u]['y'] != G.nodes[v]['y'] else 'lightgray'\n",
+        "        for u, v in subG.edges()\n",
+        "    ]\n",
+        "\n",
+        "    # 2.3) Draw this subset‐clique.\n",
+        "    plt.figure(figsize=(6,6))\n",
+        "    nx.draw(\n",
+        "        subG, pos,\n",
+        "        node_size=300,\n",
+        "        node_color=node_colors,\n",
+        "        edge_color=edge_colors,\n",
+        "        with_labels=True\n",
+        "    )\n",
+        "    plt.title(f\"Clique {idx} (showing {len(sub_nodes)}/{len(clique)} nodes)\")\n",
+        "\n",
+        "    # 2.4) Legend.\n",
+        "    legend_elems = [\n",
+        "        Patch(color=color, label=name)\n",
+        "        for name, color in [\n",
+        "            ('cultural agnostic',     label_colors[0]),\n",
+        "            ('cultural representative', label_colors[1]),\n",
+        "            ('cultural exclusive',    label_colors[2]),\n",
+        "        ]\n",
+        "    ]\n",
+        "    legend_elems.append(Patch(color='red', label='heterophilous edge'))\n",
+        "    plt.legend(handles=legend_elems, loc='best')\n",
+        "\n",
+        "    plt.show()\n"
+      ],
+      "metadata": {
+        "id": "3NcvtzuKoIaI"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1413,7 +1540,7 @@
       "metadata": {
         "id": "DqBhUuPPbtiH"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1432,7 +1559,7 @@
       "metadata": {
         "id": "YCApEiMUcEHC"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1511,7 +1638,7 @@
       "metadata": {
         "id": "Im472EVPKfZF"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1545,7 +1672,7 @@
       "metadata": {
         "id": "yuuSPZ4TFdss"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1604,7 +1731,7 @@
       "metadata": {
         "id": "2n6kuIzTHHUI"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1781,7 +1908,7 @@
       "metadata": {
         "id": "LKEHhsWJtJnI"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1905,7 +2032,7 @@
       "metadata": {
         "id": "9e22-Abaxf4J"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2037,7 +2164,7 @@
       "metadata": {
         "id": "ZlXHBAF2Pnq-"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2217,7 +2344,7 @@
       "metadata": {
         "id": "tlF2vkP-WwC6"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2468,7 +2595,7 @@
       "metadata": {
         "id": "Wm7oZj7Xkri6"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3346,7 +3473,7 @@
         "id": "v3xESiCaDaIQ",
         "outputId": "7d5b3bd4-84ee-430e-8dd3-1ddf5725d68c"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3734,7 +3861,7 @@
         "id": "-Rep4LR89Ziu",
         "outputId": "a953e34f-3e96-4105-a99e-36ace17b7025"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3779,7 +3906,7 @@
         "id": "it8f_y6uS0Qx",
         "outputId": "a311c2eb-c8c7-444b-c98d-b6c2466766e3"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3876,7 +4003,7 @@
         "id": "K9nbj1x6STI-",
         "outputId": "16c3087b-2d50-4696-c3d9-f3efa8772913"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3969,7 +4096,7 @@
         "id": "1nWvNLS0S_tz",
         "outputId": "cbdf5bac-5d90-4992-93af-87296050bb83"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4031,7 +4158,7 @@
         "id": "C04NlE9cTJO0",
         "outputId": "fc8c0536-23a9-4e3d-ef2e-99c133929136"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4146,7 +4273,7 @@
         "id": "k2-edzGpE77q",
         "outputId": "13198e34-106f-4a6d-f8a9-fb1d323e3072"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4206,7 +4333,7 @@
         },
         "outputId": "2591008e-60b5-493a-fbbc-5b9c7722033e"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
