--- a/Fine_Tuned_Transformer.ipynb
+++ b/Fine_Tuned_Transformer.ipynb
@@ -5329,6 +5329,21 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "The final model used is the encoder **all_mpnet_base_v2** with a classification head that is the result of a mixing strategy of two stable approach: mean poooling classification and max pooling classification.\n",
+        "\n",
+        "Since the good result obtained in the trials with this encoder with the **mean pool** approach and the **max poo**l approach, we decided to **combine** them in a weighted sum described by:\n",
+        "\n",
+        "    pooled = alpha * mean_pooled + (1 - alpha) * max_pooled\n",
+        "\n",
+        "The idea is that we want to mix up the smoothing given by the mean with the aggressive features given by the max in a smart way,so the natural consenquence is to sum both in a weighted way but keeping the alpha term learnable,so in this way there is no search in a discrete space of options for this value but,in fact, it is a learnable parameter that out network tries to learn."
+      ],
+      "metadata": {
+        "id": "U0lcQvqxC2AI"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "class MeanMaxPoolingClassifier(nn.Module):\n",
@@ -5402,6 +5417,19 @@
       ],
       "metadata": {
         "id": "fos3fpzDdwqm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "For the training phase we decided to impose a the **learning rate=1e-5** and to adopt a **freezing mechanism** in wich only the last 6 layers are learnable,in this way we tried to reach a stability in the validation loss.\n",
+        "\n",
+        "As a remark,we adopted the strategy of the **enhanced text** composed by name,description and the first 3 sentences of the summary. The idea ,as already discussed, is to add clean and desciptive informations as possible also for the limitation given by the RAM of the colab environment for longer sequences.\n",
+        "\n",
+        "We finally reach **stability** around 0,58 in the validation loss (so no overfitting) and a peak of **79,67% of accuracy** with an **f1-score of 79,57%.**\n"
+      ],
+      "metadata": {
+        "id": "Q0QqW5ZWCi5t"
       }
     },
     {
@@ -5991,7 +6019,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "A slightly more complex trial,with the same idea of freezing(that we always applied from now on), same learning rate and weight decay but with a even more aggressive increasing of the val loss."
+        "A slightly more complex trial,with the same idea of freezing(that we always applied from now on), same learning rate and weight decay but with an even more aggressive increasing of the val loss."
       ],
       "metadata": {
         "id": "cg82q_fcxpwc"
@@ -6518,7 +6546,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "In this section the only information passed trough the encoder are in the format \"**name:description, summary:**\"."
+        "In this section the information passed trough the encoder are in the format \"**name:description, summary:**\"."
       ],
       "metadata": {
         "id": "6FaqTxRz6uZW"
@@ -6536,9 +6564,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Now we pick up the best model in terms of stability/metric result and we apply the enhancement of the text with the first 3 sentences of the summary.\n",
+        "Now we pick up the best model in terms of stability/metric results and we apply the enhancement of the text with the first 3 sentences of the summary.\n",
         "\n",
-        "The result are quiet similar to the previous one but with a slightly less accuracy (78,33%)."
+        "The results are quiet similar to the previous one but with a slightly less accuracy (78,33%)."
       ],
       "metadata": {
         "id": "kj10qmK82bFa"
@@ -6820,14 +6848,12 @@
         "NFUZ1Wb0HDD6",
         "xUXXXzb2f71m"
       ],
-      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
