--- a/Fine_Tuned_Transformer.ipynb
+++ b/Fine_Tuned_Transformer.ipynb
@@ -5331,13 +5331,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The final model used is the encoder **all_mpnet_base_v2** with a classification head that is the result of a mixing strategy of two stable approach: mean poooling classification and max pooling classification.\n",
+        "The final model used is the encoder **all_mpnet_base_v2** with a classification head that is the result of a mixing strategy of two stable approaches: mean pooling classification and max pooling classification.\n",
         "\n",
-        "Since the good result obtained in the trials with this encoder with the **mean pool** approach and the **max poo**l approach, we decided to **combine** them in a weighted sum described by:\n",
+        "Given the good results obtained in the trials with this encoder with the **mean pool** and the **max pool** approach, we decided to **combine** them in a weighted sum described by:\n",
         "\n",
         "    pooled = alpha * mean_pooled + (1 - alpha) * max_pooled\n",
         "\n",
-        "The idea is that we want to mix up the smoothing given by the mean with the aggressive features given by the max in a smart way,so the natural consenquence is to sum both in a weighted way but keeping the alpha term learnable,so in this way there is no search in a discrete space of options for this value but,in fact, it is a learnable parameter that out network tries to learn."
+        "The idea is that we want to mix up the smoothing given by the mean with the aggressive features given by the max in a smart way. The natural consequence is to sum in a weighted way but keeping the alpha term learnable,avoiding the search in a discrete space of options for this value."
       ],
       "metadata": {
         "id": "U0lcQvqxC2AI"
@@ -5422,9 +5422,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "For the training phase we decided to impose a the **learning rate=1e-5** and to adopt a **freezing mechanism** in wich only the last 6 layers are learnable,in this way we tried to reach a stability in the validation loss.\n",
+        "For the training phase we decided to impose the **learning rate=1e-5** and to adopt a **freezing mechanism** in wich only the last 6 layers are learnable,in this way we tried to reach a stability in the validation loss.\n",
         "\n",
-        "As a remark,we adopted the strategy of the **enhanced text** composed by name,description and the first 3 sentences of the summary. The idea ,as already discussed, is to add clean and desciptive informations as possible also for the limitation given by the RAM of the colab environment for longer sequences.\n",
+        "As a remark,we adopted the strategy of the **enhanced text** composed by name,description and the first 3 sentences of the summary. The idea ,as already discussed, is to add clean and descriptive informations as possible (also for the limitation given by the RAM of the colab environment for longer sequences).\n",
         "\n",
         "We finally reach **stability** around 0,58 in the validation loss (so no overfitting) and a peak of **79,67% of accuracy** with an **f1-score of 79,57%.**\n"
       ],
