--- a/Fine_Tuned_Transformer.ipynb
+++ b/Fine_Tuned_Transformer.ipynb
@@ -5422,7 +5422,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "For the training phase we decided to impose the **learning rate=1e-5** and to adopt a **freezing mechanism** in wich only the last 6 layers are learnable,in this way we tried to reach a stability in the validation loss.\n",
+        "For the training phase we decided to impose the **learning rate=1e-5** and to adopt a **freezing mechanism** in wich only the last 6 layers are learnable,in this way we tried to reach more stability in the validation loss.\n",
         "\n",
         "As a remark,we adopted the strategy of the **enhanced text** composed by name,description and the first 3 sentences of the summary. The idea ,as already discussed, is to add clean and descriptive informations as possible (also for the limitation given by the RAM of the colab environment for longer sequences).\n",
         "\n",
