--- a/Fine_Tuned_Transformer.ipynb
+++ b/Fine_Tuned_Transformer.ipynb
@@ -5337,7 +5337,7 @@
         "\n",
         "    pooled = alpha * mean_pooled + (1 - alpha) * max_pooled\n",
         "\n",
-        "The idea is that we want to mix up the smoothing given by the mean with the aggressive features given by the max in a smart way. The natural consequence is to sum in a weighted way but keeping the alpha term learnable,avoiding the search in a discrete space of options for this value."
+        "The idea is that we want to mix up the **smoothing** given by the mean with the **aggressive** features given by the max in a smart way. The natural consequence is to sum in a weighted way but keeping the alpha term learnable,avoiding the search in a discrete space of options for this value."
       ],
       "metadata": {
         "id": "U0lcQvqxC2AI"
@@ -5422,9 +5422,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "For the training phase we decided to impose the **learning rate=1e-5** and to adopt a **freezing mechanism** in wich only the last 6 layers are learnable,in this way we tried to reach more stability in the validation loss.\n",
+        "For the training phase we decided to impose the **learning rate=1e-5**, **weight decay of 0.01** and to adopt a **freezing mechanism** in wich only the last 6 layers are learnable,in this way we tried to reach more stability in the validation loss.\n",
         "\n",
-        "As a remark,we adopted the strategy of the **enhanced text** composed by name,description and the first 3 sentences of the summary. The idea ,as already discussed, is to add clean and descriptive informations as possible (also for the limitation given by the RAM of the colab environment for longer sequences).\n",
+        "As a remark,we adopted the strategy of the **enhanced text** composed by name,description and the first 3 sentences of the summary. The idea ,as already discussed, is to add the cleanest and most descriptive information among those availables from the wikidata/wikipedia pages(also for the limitation given by the RAM of the colab environment for longer sequences).\n",
         "\n",
         "We finally reach **stability** around 0,58 in the validation loss (so no overfitting) and a peak of **79,67% of accuracy** with an **f1-score of 79,57%.**\n"
       ],
@@ -5688,8 +5688,8 @@
       "source": [
         "Here highlated all the model used in the trials:\n",
         "\n",
-        "- **Simple Classifier**: just used in the BERT case, it was the most straightforward approach with just a classification head added, composed of a linear classifier.\n",
-        "- **GRU Classifier**:also here just used in the BERT case, adding a linear classifier after the GRU result in order to see how the last token given by the GRU could be more effective than the classical [CLS] token.\n",
+        "- **Simple Classifier**: just used in the BERT case, it was the most straightforward approach with just a classification head composed by a linear classifier.\n",
+        "- **GRU Classifier**:also here just used in the BERT case, adding a linear classifier after the GRU result in order to see if the last token given by the GRU could be more effective than the classical [CLS] token.\n",
         "- **Mean pooling classifier**: widely used in most of the cases becuase the increasing of stability during training, the idea was to have a mean over all the token embeddings in order to achieve a classification with no overfitting.\n",
         "- **Max pooling classifier**: used with the mpnet encoder,slightly worse result but stable. Used as a comparison with the mean pooling approach,here the idea was to pick up ,iteration by iteration, the most important features for the purpose of the classiffication task."
       ],
@@ -6319,7 +6319,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Here the behaviot is very similar to the previos one but with a peak of 78,3% of accuracy and with less training time due to the presence of only 6 layers (3 freezed)."
+        "Here the behavior is very similar to the previos one but with a peak of 78,3% of accuracy and with less training time due to the presence of only 6 layers (3 freezed)."
       ],
       "metadata": {
         "id": "ebXcPT41zfwR"
